manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: java-app
spec:
  replicas: 5
  selector:
    matchLabels:
      microservice: api
      app: java-app
  template:
    metadata:
      labels:
        microservice: api
        app: java-app
    spec:
      containers:
        - name: api-container
          image: gowthamarumugam/java-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          healthProbe:
            readinessProbe:
              httpGet:
                path: /color
                port: 8080
            livenessProbe:
              httpGet:
                path: /color
                port: 8080
            startupProbe:
              httpGet:
                path: /color
                port: 8080
