manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: springboot-app
  namespace: java-app
spec:
  replicas: 0
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      microservice: api
      app: java-app
  template:
    metadata:
      labels:
        microservice: api
        app: java-app
    spec:
      containers:
        - name: springboot-app
          image: gowthamarumugam/java-app:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
              path: /health
            initialDelaySeconds: 5
          startupProbe:
            httpGet: 
              port: 8080
              path: /health
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              port: 8080
              path: /health
            initialDelaySeconds: 5
  strategy:
    blueGreen:
      activeService: api-service
      previewService: api-service-green
      autoPromotionEnabled: false
