manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: java-app
spec:
  selector:
    microservice: api
    app: java-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
